Bug 513413 - Context menu opens when I tap on a layer, overriding drag and show/hide actions
Summary: Context menu opens when I tap on a layer, overriding drag and show/hide actions
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: 5.2.14
Platform: Android Android 14.x
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2025-12-15 19:27 UTC by Chris W
Modified: 2026-01-16 14:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
attempting to drag a layer to reorder it using the stylus (1.49 MB, video/mp4)
2025-12-15 19:27 UTC, Chris W
Details
screenshot of Tools settings (411.02 KB, image/jpeg)
2025-12-15 21:14 UTC, Chris W
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Chris W 2025-12-15 19:27:24 UTC
Created attachment 187683 [details]
attempting to drag a layer to reorder it using the stylus

***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports

Please remove this comment after reading and before submitting - thanks!
***

SUMMARY
On the Samsung Galaxy Tab S9 Ultra, when I tap on a layer with my finger or the stylus, the context menu opens. I am unable to drag-to-reorder the layer or show / hide layers starting from Krita 5.14 because the context menu takes priority over my intended action.

STEPS TO REPRODUCE
1. Open an existing Krita file in 5.14 on a Samsung tablet
2. Tap on a layer with your finger or stylus
3. Try to drag to reorder the layer
4. Try to tap the eye icon to show/hide the layer

OBSERVED RESULT
The context menu opens

EXPECTED RESULT
I can drag to reorder a layer and tap on the eye icon to show / hide a layer. The context menu only appears if I long press without dragging.

SOFTWARE/OS:
Krita 5.14
Android 16
Samsung Galaxy Tab S9 Ultra
OneUI 8.0

ADDITIONAL INFORMATION
Comment 1 dra.w.p.il.e+bugskde 2025-12-15 20:13:09 UTC
Not something I can reproduce on any of my Samsung devices, but it was reported on another device as well and seems to have something to do with kinetic scrolling.

Can you take a screenshot of what your settings look like in that regard? Settings → Configure Krita, General category, Tools tab.
Comment 2 Chris W 2025-12-15 21:14:26 UTC
Created attachment 187685 [details]
screenshot of Tools settings
Comment 3 Chris W 2025-12-15 21:14:49 UTC
(In reply to Chris W from comment #2)
> Created attachment 187685 [details]
> screenshot of Tools settings

Thanks very much for your reply.

Yes, I've attached a screenshot of those settings
Comment 4 dra.w.p.il.e+bugskde 2025-12-15 21:22:22 UTC
How does it behave when you change the "On Touch Drag" option to "On Click Drag" (the default) and then restart Krita? That is, properly restarting it, going into the applications overview, swiping it away and then starting it again. You'll know you did it correctly if you see the initial loading screen again.

It should still let you scroll via touch afterwards. I can't quite make it it happen instantaneously on my devices when I change the setting, but it's definitely unduly faster than with the regular click drag setting, so it's likely that the problem is in this option somehow.
Comment 5 Chris W 2025-12-15 22:18:18 UTC
(In reply to Chris W from comment #2)
> Created attachment 187685 [details]
> screenshot of Tools settings

Thanks very much for your reply.

Yes, I've attached a screenshot of those settings(In reply to dra.w.p.il.e+bugskde from comment #4)
> How does it behave when you change the "On Touch Drag" option to "On Click
> Drag" (the default) and then restart Krita? That is, properly restarting it,
> going into the applications overview, swiping it away and then starting it
> again. You'll know you did it correctly if you see the initial loading
> screen again.
> 
> It should still let you scroll via touch afterwards. I can't quite make it
> it happen instantaneously on my devices when I change the setting, but it's
> definitely unduly faster than with the regular click drag setting, so it's
> likely that the problem is in this option somehow.

(In reply to dra.w.p.il.e+bugskde from comment #4)
> How does it behave when you change the "On Touch Drag" option to "On Click
> Drag" (the default) and then restart Krita? That is, properly restarting it,
> going into the applications overview, swiping it away and then starting it
> again. You'll know you did it correctly if you see the initial loading
> screen again.
> 
> It should still let you scroll via touch afterwards. I can't quite make it
> it happen instantaneously on my devices when I change the setting, but it's
> definitely unduly faster than with the regular click drag setting, so it's
> likely that the problem is in this option somehow.

It works much better with "On Click Drag" thank you. I can now show/hide layers by tapping on the 'eye' icon. The context menu only opens when I long press the layer with the style or my finger now.

I can't drag to reorder the layers anymore, as dragging scrolls the list up and down, but that's OK. I can use the chevron up and chevron down buttons in the layers panel to do that. 

Also, when I first open the file, when I drag my finger across the screen to pan, it paints a stroke instead. Touch panning only works after I have made a brush stroke with the stylus. After making a brush stroke with the stylus, I can use my finger to pan. Before that, my finger paints a stroke. 

I'm happy with this workaround, thank you so much for your help. I can report the behaviour with touch panning in a separate bug if that would be helpful?
Comment 6 dra.w.p.il.e+bugskde 2025-12-16 00:00:49 UTC
Alright, thanks. I'll set this bug to confirmed then.

The thing with touch drawing is intentional, it's caused by the "Touch Painting" setting being set to "Auto", which makes Krita guess whether you have a pen or not. You can change it to "Disabled" instead.
Comment 7 Bug Janitor Service 2026-01-06 23:59:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2590
Comment 8 Dmitry Kazakov 2026-01-07 08:50:03 UTC
Git commit 7070ac178b3a205d8d2e65678cd153e31e1f4a80 by Dmitry Kazakov, on behalf of Carsten Hartenfels.
Committed on 07/01/2026 at 08:49.
Pushed by dkazakov into branch 'master'.

[android] Make touch scrolling not trigger menu

When setting the kinetic scroll gesture to touch drag on Android, it
doesn't actually delay the emulation of mouse events, so we must not
subtract the kinetic scroll delay from the long-press emulation or else
we end up instantly opening the context menu.

M  +1    -5    libs/ui/KisLongPressEventFilter.cpp

https://invent.kde.org/graphics/krita/-/commit/7070ac178b3a205d8d2e65678cd153e31e1f4a80
Comment 9 Dmitry Kazakov 2026-01-16 14:30:59 UTC
Git commit 54b7a2f824b94ab26ea8a22d88880e49c0321a66 by Dmitry Kazakov, on behalf of Carsten Hartenfels.
Committed on 16/01/2026 at 14:30.
Pushed by dkazakov into branch 'krita/5.2'.

[android] Make touch scrolling not trigger menu

When setting the kinetic scroll gesture to touch drag on Android, it
doesn't actually delay the emulation of mouse events, so we must not
subtract the kinetic scroll delay from the long-press emulation or else
we end up instantly opening the context menu.

M  +1    -5    libs/ui/KisLongPressEventFilter.cpp

https://invent.kde.org/graphics/krita/-/commit/54b7a2f824b94ab26ea8a22d88880e49c0321a66