[android] Make touch scrolling not trigger menu

When setting the kinetic scroll gesture to touch drag on Android, it
doesn't actually delay the emulation of mouse events, so we must not
subtract the kinetic scroll delay from the long-press emulation or else
we end up instantly opening the context menu.

BUG:513413